<resources>
    <string name="app_name">tareaMovil</string>


    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>


    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_pantalla_inicial">pantallaInicial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cita">Citas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <string name="msg_Nombre">Nombre de Cliente</string>

    <string name="msg_Apellido1">Primer Apellido del Cliente</string>
    <string name="msg_Apellido2">Segundo Apellido del Cliente</string>

    <string name="msg_Descripcion">Descripción de la cita</string>

    <string name="msg_padecimiento">Padecimiento</string>


    <string name="bt_agregar">Agregar</string>
</resources>